src/test/deca/context/invalid/sansObj/variable-sans-nom.deca
// Description:
//      Déclaration d'une variable sans nom
//
//  Résultat:
//no viable alternative at input 'int'

    int;
}